# webserv

./: .gitignore  CMakeLists.txt  ExampleRequestFile.txt  Makefile  ParseRequest.cpp  Request.cpp  RequestFile.txt  Response.cpp  main.cpp  responses.py  responses.txt  shoot_requests.py  upload.html  webserv  webserv.drawio  webserve
Request/: ErrorHandling.cpp  GetRequest.cpp  ParseRequest.cpp  Request.cpp  RequestFile.txt
Response/: GetResponse.cpp  Response.cpp
Tests/: RequestTests.cpp
cgi-bin/: form_input.py  hello_world.py  sleep.py
classes/: Route.hpp  Server.cpp  Server.hpp  Socket.cpp  Socket.hpp
conf/: default.conf  multiple_servers.conf
error_pages/: 400.html  401.html  402.html  403.html  404.html  405.html  406.html  407.html  408.html  409.html  410.html  411.html  412.html  413.html  414.html  415.html  416.html  417.html  418.html  421.html  422.html  423.html  424.html  425.html  426.html  428.html  429.html  431.html  451.html  500.html  501.html  502.html  503.html  504.html  505.html  506.html  507.html  508.html  510.html  511.html
srcs/: CGI.cpp  (+36 more)
tests/: CMakeLists.txt  responses.py  shoot_requests.py
tests/regressiontests/: pytest_dev.py  test_statuscodes.py
tests/unittests/: catch2_irrelevant_main.cpp  test_cgi.cpp  test_config.cpp  test_connection.cpp  test_options.cpp  test_parser.cpp  test_request.cpp  test_response.cpp  test_socket.cpp  test_utils.cpp  unittests.hpp  utils.cpp
tests/unittests/cgi-bin/: form_input.py  hello_world.py
tests/unittests/config_files/: basic.conf  basic_without_redirect.conf  invalid_brackets.conf
(+102 files in other folders)
